# c-sources

./: .gitignore  CMakeLists.txt  README.md  compile-sources.sh
array/: .array_disorder.swp  array_disorder.c  array_merge.c  average_4_arrays.c  bubble_sorting.c  load_print_array.c  max_min_array.c
compiled-sources/: array_disorder  cube
exercises/: asterisks_square.c  change_2_values.c  choice_month.c  copy_string.c  cube.c  dade_game  dade_game.c  fibonacci_sequence.c  hello-world.c  parkimeter.c  phonebook.c  random_values_generator.c  scientific-calculator.c  supermarket_checkout.c
math-functions/: cube.c  difference.c
pointers/: print_for_value_address.c  scientific_calculator_pointers.c
recursion/: factorial_recursive.c  occurrence_search_pointers.c  pow_recursive.c  product_recursive.c  quozient_recursive.c  recursion_complete.c  square_recursive.c  sum_recursive.c
